# gauge-invariant-representation-holonomy-code

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: README.md
data/: README.md
notebooks/: README.md
scripts/: README.md
src/holonomy/: __init__.py
tests/: README.md
