[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "representation-holonomy"
version = "0.1.0"
description = "Code for gauge-invariant representation holonomy experiments."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Vasileios Sevetlidis" },
  { name = "George Pavlidis" }
]
dependencies = [
  "numpy",
  "scipy",
  "pandas",
  "matplotlib",
  "seaborn",
  "scikit-learn",
  "tqdm",
  "pyyaml",
  "torch",
  "torchvision"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
